tests/ui/resolve/use-self-in-inner-fn.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/use-self-in-inner-fn.rs:6:25
   |
LL | impl A {
   | ---- `Self` type implicitly declared here, by this `impl`
...
LL |         fn peach(this: &Self) {
   |                         ^^^^
   |                         |
   |                         use of generic parameter from outer item
   |                         refer to the type directly here instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
